--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,15 @@ server.port=8090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shopdb
-spring.datasource.username=jgw
+spring.datasource.username=ksh
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+#Key depends on JSW alogrithm HMAC ( >= 64bytes )
+app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
+#1 day
+app.jwt.expiration-in-ms=86400000
